Tests/typing/bad/testfile-duplicate-4.jl

function f(x) 42 end
function f(x) 1729 end
